# crypto_API_demonstrator

./: README.md
LPC55S69_PSA_demonstrator/: LPC55S69_PSA_demonstrator LinkServer Debug.launch
LPC55S69_PSA_demonstrator/armgcc/: CMakeLists.txt  LPC55S69_PSA_demonstrator_Debug.ld  flags.cmake  ide_overrides.cmake
LPC55S69_PSA_demonstrator/armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  LPC55S69_PSA_demonstrator.elf  LPC55S69_PSA_demonstrator_Debug_library.ld  LPC55S69_PSA_demonstrator_Debug_memory.ld  build.ninja  cmake_install.cmake  compile_commands.json  output.map
LPC55S69_PSA_demonstrator/armgcc/debug/.cmake/api/v1/reply/: cache-v2-2be16b98487bbbf9cc50.json  cmakeFiles-v1-58d2cd4f35389e547b0a.json  codemodel-v2-e98ba7c2b61c85c98595.json  index-2024-04-18T11-53-40-0577.json  target-LPC55S69_PSA_demonstrator.elf-debug-c39ceb50e9c9f65ca75f.json  toolchains-v1-da5df464d31b93e73f46.json
LPC55S69_PSA_demonstrator/mbedtls/port/ksdk/: ksdk_mbedtls_config.h
LPC55S69_PSA_demonstrator/source/: LPC55S69_PSA_demonstrator.c
esp32_PSA_demonstrator/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32_PSA_demonstrator/main/: main.c
